--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>PHPJabber | Car Dealer Website Template</title>
+     <title>RNS automobiles | Car Dealer</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -35,28 +35,41 @@
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
+               <div class="row">
+                    <div class="col-md-3">
+                         <div class="navbar-header">
+                              <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                              </button>
 
-               <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                    </button>
+                              <!-- lOGO TEXT HERE -->
+                              <a href="index.html"><img src="icon/logo.png" alt="RNS automobiles" height="80" width="120" />
+                              </a>
+                         </div>
+                    </div>
 
-                    <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">Car Dealer Website</a>
+                    <!-- MENU LINKS -->
+                    <div class="col-md-8">
+                         <div class="collapse navbar-collapse">
+                              <ul class="nav navbar-nav navbar-nav-first">
+                                   <li><a href="index.html">Home</a></li>
+                                   <li><a href="cars.html">Gallery</a></li>
+                                   <li class="active"><a href="about-us.html">About Us</a></li>
+                                   <li><a href="contact.html">Contact Us</a></li>
+                              </ul>
+
+                         </div>
+                    </div>
+                    <div class="col-md-1" style="top: 22px">
+                         <div class="navbar-nav" style="float: right !important;">
+                              <a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="nav-item nav-link" style="padding-right:20px "><i class="fa fa-facebook"></i></a>
+                              <a target="_blank" href="https://www.youtube.com/@rnsautomobiles2459" class="nav-item nav-link"><i class="fa fa-youtube"></i></a>
+                         </div>
+                    </div>
+
                </div>
-
-               <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="index.html">Home</a></li>
-						 <li><a href="cars.html">Gallery</a></li>
-	                     <li class="active"><a href="about-us.html">About Us</a></li>
-                         <li><a href="contact.html">Contact Us</a></li>
-                    </ul>
-               </div>
-
           </div>
      </section>
 
@@ -67,7 +80,7 @@
 
                     <br>
 
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, alias.</p>
+                    <p class="lead">RNS automobiles provides all kinds of Re-conditioned vehicles and is the importer and seller, also engaged with pre-order brand new vehicles from Japan. We always provide quality cars to our customers. You are always welcome to our showroom.</p>
                </div>
           </div>
      </section>
@@ -75,66 +88,11 @@
      <section class="section-background">
           <div class="container">
                <div class="row">
-                    <div class="col-md-offset-1 col-md-4 col-xs-12 pull-right">
-                         <img src="images/about-1-720x720.jpg" class="img-responsive img-circle" alt="">
-                    </div>
-
-                    <div class="col-md-7 col-xs-12">
-                         <div class="about-info">
-                              <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, eos. Corporis, dolor?</h2>
-
-                              <figure>
-                                   <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, deserunt beatae praesentium veniam. Aperiam assumenda quas qui officiis, minima laudantium?</p>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis saepe quos repellat eum tempore magnam molestiae. Minus atque, aliquid assumenda, vero non recusandae illum optio, sint dignissimos praesentium ducimus repudiandae eius, nulla. Pariatur magnam alias est voluptatibus distinctio voluptate culpa, iste quisquam! Iure itaque rerum sequi, tenetur voluptatibus nihil quaerat, quisquam non in autem ducimus tempore impedit. Odit, corporis, praesentium.</p>
-                                   </figcaption>
-                              </figure>
-                         </div>
-                    </div>
+                    <iframe width="100%" height="600" src="https://www.youtube.com/embed/RdS23XCF1P8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                </div>
           </div>
      </section>
 
-     <section>
-          <div class="container">
-               <div class="row">
-                    <div class="col-md-4 col-xs-12">
-                         <img src="images/about-2-720x720.jpg" class="img-responsive img-circle" alt="">
-                    </div>
-
-                    <div class="col-md-offset-1 col-md-7 col-xs-12">
-                         <div class="about-info">
-                              <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, minima!</h2>
-
-                              <figure>
-                                   <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, deserunt beatae praesentium veniam. Aperiam assumenda quas qui officiis, minima laudantium?</p>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis saepe quos repellat eum tempore magnam molestiae. Minus atque, aliquid assumenda, vero non recusandae illum optio, sint dignissimos praesentium ducimus repudiandae eius, nulla. Pariatur magnam alias est voluptatibus distinctio voluptate culpa, iste quisquam! Iure itaque rerum sequi, tenetur voluptatibus nihil quaerat, quisquam non in autem ducimus tempore impedit. Odit, corporis, praesentium.</p>
-                                   </figcaption>
-                              </figure>
-                         </div>
-                    </div>
-               </div>
-          </div>
-     </section>
-
-     <section class="section-background">
-          <div class="container">
-               <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                         <div class="text-center">
-                              <h2>Lorem ipsum dolor sit amet</h2>
-
-                              <br>
-
-                              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore molestias ipsa veritatis nihil iusto maiores natus dolor, a reiciendis corporis obcaecati ex. Totam assumenda impedit aut eum, illum distinctio saepe explicabo. Consequuntur molestiae similique id quos, quasi quas perferendis laboriosam, fugit natus odit totam! Id dolores saepe, sint debitis rerum dolorem tempora aliquid, pariatur enim nisi. Quia ab iusto assumenda.</p>
-                         </div>
-                    </div>
-               </div>
-          </div>
-     </section>
 
      <!-- FOOTER -->
      <footer id="footer">
@@ -147,19 +105,13 @@
                                    <h2>Headquarter</h2>
                               </div>
                               <address>
-                                   <p>212 Barrington Court <br>New York, ABC 10001</p>
+                                   <p>30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka, Bangladesh</p>
                               </address>
 
                               <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
                               </ul>
-
-                              <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2020 Company Name</p>
-                                   <p>Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
-                              </div>
                          </div>
                     </div>
 
@@ -169,8 +121,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+1 333 4040 5566</p>
-                                   <p><a href="mailto:contact@company.com">contact@company.com</a></p>
+                                   <p>+8801711-333321</p>
+                                   <p><a href="mailto:info@rnsautomobiles.net">info@rnsautomobiles.net</a></p>
                               </address>
 
                               <div class="footer_menu">
@@ -178,7 +130,6 @@
                                    <ul>
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="terms.html">Terms & Conditions</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                    </ul>
                               </div>
@@ -188,20 +139,15 @@
                     <div class="col-md-4 col-sm-12">
                          <div class="footer-info newsletter-form">
                               <div class="section-title">
-                                   <h2>Newsletter Signup</h2>
+                                   <h2>Copyright</h2>
                               </div>
-                              <div>
-                                   <div class="form-group">
-                                        <form action="#" method="get">
-                                             <input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required>
-                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
-                                        </form>
-                                        <span><sup>*</sup> Please note - we do not spam your email.</span>
-                                   </div>
+                              <div class="copyright-text">
+                                   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <br>RNS automobiles All Rights Reserved</p>
+                                   <p>By: <a target="_blank" href="https://www.facebook.com/RNSautomobiles">RNS automobiles</a></p>
                               </div>
                          </div>
                     </div>
-                    
+
                </div>
           </div>
      </footer>
