--- a/cars.html
+++ b/cars.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>PHPJabber | Car Dealer Website Template</title>
+     <title>RNS automobiles | Car Dealer</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -34,28 +34,41 @@
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
+               <div class="row">
+                    <div class="col-md-3">
+                         <div class="navbar-header">
+                              <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                              </button>
 
-               <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                    </button>
+                              <!-- lOGO TEXT HERE -->
+                              <a href="index.html"><img src="icon/logo.png" alt="RNS automobiles" height="80" width="120" />
+                              </a>
+                         </div>
+                    </div>
 
-                    <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">Car Dealer Website</a>
+                    <!-- MENU LINKS -->
+                    <div class="col-md-8">
+                         <div class="collapse navbar-collapse">
+                              <ul class="nav navbar-nav navbar-nav-first">
+                                   <li><a href="index.html">Home</a></li>
+                                   <li class="active"><a href="cars.html">Gallery</a></li>
+                                   <li><a href="about-us.html">About Us</a></li>
+                                   <li><a href="contact.html">Contact Us</a></li>
+                              </ul>
+
+                         </div>
+                    </div>
+                    <div class="col-md-1" style="top: 22px">
+                         <div class="navbar-nav" style="float: right !important;">
+                              <a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="nav-item nav-link" style="padding-right:20px "><i class="fa fa-facebook"></i></a>
+                              <a target="_blank" href="https://www.youtube.com/@rnsautomobiles2459" class="nav-item nav-link"><i class="fa fa-youtube"></i></a>
+                         </div>
+                    </div>
+
                </div>
-
-               <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="index.html">Home</a></li>
-						 <li class="active"><a href="cars.html">Gallery</a></li>
-	                     <li><a href="about-us.html">About Us</a></li>
-                         <li><a href="contact.html">Contact Us</a></li>
-                    </ul>
-               </div>
-
           </div>
      </section>
 
@@ -130,18 +143,13 @@
                                    <h2>Headquarter</h2>
                               </div>
                               <address>
-                                   <p>212 Barrington Court <br>New York, ABC 10001</p>
+                                   <p>30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka, Bangladesh</p>
                               </address>
 
                               <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
                               </ul>
-
-                              <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2023 Company Name</p>
-                              </div>
                          </div>
                     </div>
 
@@ -151,8 +159,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+1 333 4040 5566</p>
-                                   <p><a href="mailto:contact@company.com">contact@company.com</a></p>
+                                   <p>+8801711-333321</p>
+                                   <p><a href="mailto:info@rnsautomobiles.net">info@rnsautomobiles.net</a></p>
                               </address>
 
                               <div class="footer_menu">
@@ -160,7 +168,6 @@
                                    <ul>
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="terms.html">Terms & Conditions</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                    </ul>
                               </div>
@@ -170,20 +177,15 @@
                     <div class="col-md-4 col-sm-12">
                          <div class="footer-info newsletter-form">
                               <div class="section-title">
-                                   <h2>Newsletter Signup</h2>
+                                   <h2>Copyright</h2>
                               </div>
-                              <div>
-                                   <div class="form-group">
-                                        <form action="#" method="get">
-                                             <input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required>
-                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
-                                        </form>
-                                        <span><sup>*</sup> Please note - we do not spam your email.</span>
-                                   </div>
+                              <div class="copyright-text">
+                                   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <br>RNS automobiles All Rights Reserved</p>
+                                   <p>By: <a target="_blank" href="https://www.facebook.com/RNSautomobiles">RNS automobiles</a></p>
                               </div>
                          </div>
                     </div>
-                    
+
                </div>
           </div>
      </footer>
