--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>PHPJabber | Car Dealer Website Template</title>
+     <title>RNS automobiles | Car Dealer</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -15,6 +15,7 @@
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/owl.carousel.css">
      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+     <script src="https://unpkg.com/vue@next"></script>
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
@@ -35,28 +36,41 @@
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
           <div class="container">
+               <div class="row">
+                    <div class="col-md-3">
+                         <div class="navbar-header">
+                              <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                                   <span class="icon icon-bar"></span>
+                              </button>
 
-               <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                         <span class="icon icon-bar"></span>
-                    </button>
+                              <!-- lOGO TEXT HERE -->
+                              <a href="index.html"><img src="icon/logo.png" alt="RNS automobiles" height="80" width="120" />
+                              </a>
+                         </div>
+                    </div>
 
-                    <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">Car Dealer Website</a>
+                    <!-- MENU LINKS -->
+                    <div class="col-md-8">
+                         <div class="collapse navbar-collapse">
+                              <ul class="nav navbar-nav navbar-nav-first">
+                                   <li><a href="index.html">Home</a></li>
+                                   <li><a href="cars.html">Gallery</a></li>
+                                   <li><a href="about-us.html">About Us</a></li>
+                                   <li class="active"><a href="contact.html">Contact Us</a></li>
+                              </ul>
+
+                         </div>
+                    </div>
+                    <div class="col-md-1" style="top: 22px">
+                         <div class="navbar-nav" style="float: right !important;">
+                              <a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="nav-item nav-link" style="padding-right:20px "><i class="fa fa-facebook"></i></a>
+                              <a target="_blank" href="https://www.youtube.com/@rnsautomobiles2459" class="nav-item nav-link"><i class="fa fa-youtube"></i></a>
+                         </div>
+                    </div>
+
                </div>
-
-               <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="index.html">Home</a></li>
-						 <li><a href="cars.html">Gallery</a></li>
-	                     <li><a href="about-us.html">About Us</a></li>
-                         <li class="active"><a href="contact.html">Contact Us</a></li>
-                    </ul>
-               </div>
-
           </div>
      </section>
 
@@ -67,7 +81,7 @@
 
                     <br>
 
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, alias.</p>
+                    <p class="lead">If you have any query. Feel free to ask!</p>
                </div>
           </div>
      </section>
@@ -79,26 +93,35 @@
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-8 col-sm-12">
                          <form id="contact-form" role="form" action="" method="post">
                               <div class="col-md-12 col-sm-12">
-                                   <input type="text" class="form-control" placeholder="Enter full name" name="name" required>
-                    
-                                   <input type="email" class="form-control" placeholder="Enter email address" name="email" required>
+                                   <input type="text" v-model="name" class="form-control" placeholder="Enter full name" name="name" required>
 
-                                   <textarea class="form-control" rows="6" placeholder="Tell us about your message" name="message" required></textarea>
+                                   <input type="text" v-model="phone" class="form-control" placeholder="Enter phone number" name="phone" required>
+
+                                   <input type="email" v-model="fromEmail" class="form-control" placeholder="Enter email address" name="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" required>
+
+                                   <textarea class="form-control" v-model="message" rows="6" placeholder="Tell us about your message" name="message" required></textarea>
                               </div>
 
                               <div class="col-md-4 col-sm-12">
-                                   <input type="submit" class="form-control" name="send message" value="Send Message">
+                                   <input type="submit" class="form-control" name="send message" @click="sentEmail()" value="Send Message">
                               </div>
 
                          </form>
+                         <div>
+                              <p v-if="this.responseMessage">{{this.responseMessage}}</p>
+                         </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-4 col-sm-12">
                          <div class="contact-image">
-                              <img src="images/contact-1-600x400.jpg" class="img-responsive" alt="">
+                              <div class="col-md-12 col-sm-12">
+                                   <h2>RNS automobiles</h2>
+                                   <h6>30, Inner Circular (VIP) Road, Naya Paltan, Dhaka, Bangladesh</h6>
+                                   <h6>+8801711-333321</h6>
+                              </div>
                          </div>
                     </div>
 
@@ -120,19 +143,13 @@
                                    <h2>Headquarter</h2>
                               </div>
                               <address>
-                                   <p>212 Barrington Court <br>New York, ABC 10001</p>
+                                   <p>30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka, Bangladesh</p>
                               </address>
 
                               <ul class="social-icon">
-                                   <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
                               </ul>
-
-                              <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2020 Company Name</p>
-                                   <p>Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
-                              </div>
                          </div>
                     </div>
 
@@ -142,8 +159,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+1 333 4040 5566</p>
-                                   <p><a href="mailto:contact@company.com">contact@company.com</a></p>
+                                   <p>+8801711-333321</p>
+                                   <p><a href="mailto:info@rnsautomobiles.net">info@rnsautomobiles.net</a></p>
                               </address>
 
                               <div class="footer_menu">
@@ -151,7 +168,6 @@
                                    <ul>
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="terms.html">Terms & Conditions</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                    </ul>
                               </div>
@@ -161,16 +177,11 @@
                     <div class="col-md-4 col-sm-12">
                          <div class="footer-info newsletter-form">
                               <div class="section-title">
-                                   <h2>Newsletter Signup</h2>
+                                   <h2>Copyright</h2>
                               </div>
-                              <div>
-                                   <div class="form-group">
-                                        <form action="#" method="get">
-                                             <input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required>
-                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
-                                        </form>
-                                        <span><sup>*</sup> Please note - we do not spam your email.</span>
-                                   </div>
+                              <div class="copyright-text">
+                                   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <br>RNS automobiles All Rights Reserved</p>
+                                   <p>By: <a target="_blank" href="https://www.facebook.com/RNSautomobiles">RNS automobiles</a></p>
                               </div>
                          </div>
                     </div>
@@ -186,6 +197,7 @@
      <script src="js/owl.carousel.min.js"></script>
      <script src="js/smoothscroll.js"></script>
      <script src="js/custom.js"></script>
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
      <script src="js/email.js"></script>
 
 </body>
