updated files according to requirements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 
      <title>RNS automobiles | Car Dealer</title>
@@ -163,8 +163,10 @@
      <section id="testimonial">
           <div class="container slideshow">
                <div class="row">
+                    <div class="col-md-3">
 
-                    <div class="col-md-12 col-sm-12">
+                    </div>
+                    <div class="col-md-7 col-sm-7">
                          <div class="section-title text-center">
                               <h2>Happy Customer <small>from around the Country</small></h2>
                          </div>
@@ -182,6 +184,13 @@
                          </div>
 
                </div>
+                    <div class="col-md-2">
+
+                    </div>
+               </div>
+               <div style="margin-top: 10px;">
+                    <button class="btn btn-outline-success btn-rounded" @click="prev"><i class="fa fa-arrow-left" style="padding: 10px"></i></button>
+                    <button class="btn btn-outline-success btn-rounded" @click="next"><i class="fa fa-arrow-right" style="padding: 10px"></i></button>
                </div>
           </div>
      </section>
