--- a/cars.html
+++ b/cars.html
@@ -140,10 +140,12 @@
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
                               <div class="section-title">
-                                   <h2>Headquarter</h2>
+                                   <h2>Showroom</h2>
                               </div>
                               <address>
-                                   <p>30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka, Bangladesh</p>
+                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> 30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka-1000, Bangladesh</p>
+                                   <p><i class="fa fa-phone" aria-hidden="true"></i> +8801711-333321</p>
+                                   <p><i class="fa fa-envelope" aria-hidden="true"></i> info@rnsautomobiles.net</p>
                               </address>
 
                               <ul class="social-icon">
