--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                               </button>
 
                               <!-- lOGO TEXT HERE -->
-                              <a href="index.html"><img src="icon/logo.png" alt="RNS automobiles" height="80" width="120" />
+                              <a href="index.html"><img src="icon/logo.png" alt="RNS automobiles" style="position: fixed; left: 0%; margin-left: 35px" height="100" width="200" />
                               </a>
                          </div>
                     </div>
