--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
      <div class="container">
           <div class="row">
 
-               <div class="col-md-4 col-sm-6">
+               <div class="col-sm-4 col-sm-6">
                     <div class="footer-info">
                          <div class="section-title">
                               <h2>Headquarter</h2>
@@ -213,10 +213,12 @@
                               <p>30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka, Bangladesh</p>
                          </address>
 
-                         <ul class="social-icon">
-                              <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                              <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
-                         </ul>
+                         <div style="position: fixed; left: 0%">
+                              <ul class="social-icon">
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
+                              </ul>
+                         </div>
                     </div>
                </div>
 
