--- a/index.html
+++ b/index.html
@@ -226,21 +226,18 @@
                <div class="col-md-4 col-sm-6">
                     <div class="footer-info">
                          <div class="section-title">
-                              <h2>Contact Info</h2>
+                              <h2>Available Hour</h2>
                          </div>
                          <address>
-                              <p>+8801711-333321</p>
-                              <p><a href="mailto:info@rnsautomobiles.net">info@rnsautomobiles.net</a></p>
+                              <p>Tuesday &nbsp; &nbsp;  <span class="">Closed</span></p>
+                              <p>Wednesday &nbsp; <span>10AM–8PM</span></p>
+                              <p>Thursday &nbsp; &nbsp; <span>10AM–8PM</span></p>
+                              <p>Friday &nbsp; &nbsp; <span>10AM–8PM</span></p>
+                              <p>Saturday &nbsp; &nbsp; <span>10AM–8PM</span></p>
+                              <p>Sunday &nbsp; &nbsp; <span>10AM–8PM </span></p>
+                              <p>Monday &nbsp; &nbsp; <span>10AM–8PM </span></p>
                          </address>
 
-                         <div class="footer_menu">
-                              <h2>Quick Links</h2>
-                              <ul>
-                                   <li><a href="index.html">Home</a></li>
-                                   <li><a href="about-us.html">About Us</a></li>
-                                   <li><a href="contact.html">Contact Us</a></li>
-                              </ul>
-                         </div>
                     </div>
                </div>
 
