--- a/contact.html
+++ b/contact.html
@@ -143,14 +143,17 @@
                                    <h2>Showroom</h2>
                               </div>
                               <address>
-                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> 30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka-1000, Bangladesh</p>
+                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> 30, Inner Circular (VIP) Road, Naya
+                                        Paltan<br> Dhaka-1000, Bangladesh</p>
                                    <p><i class="fa fa-phone" aria-hidden="true"></i> +8801711-333321</p>
                                    <p><i class="fa fa-envelope" aria-hidden="true"></i> info@rnsautomobiles.net</p>
                               </address>
 
                               <ul class="social-icon">
-                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles"
+                                          class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg"
+                                          class="fa fa-youtube"></a></li>
                               </ul>
                          </div>
                     </div>
@@ -161,13 +164,28 @@
                                    <h2>Available Hour</h2>
                               </div>
                               <address>
-                                   <p>Tuesday &nbsp; &nbsp;  <span class="">Closed</span></p>
-                                   <p>Wednesday &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Thursday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Friday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Saturday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Sunday &nbsp; &nbsp; <span>10AM–8PM </span></p>
-                                   <p>Monday &nbsp; &nbsp; <span>10AM–8PM </span></p>
+                                   <div class="row">
+                                        <div class="col-md-4">
+                                             <p>Saturday</p>
+                                             <p>Sunday</p>
+                                             <p>Monday</p>
+                                             <p>Tuesday </p>
+                                             <p>Wednesday</p>
+                                             <p>Thursday</p>
+                                             <p>Friday</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>Closed</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                        </div>
+                                   </div>
                               </address>
 
                          </div>
@@ -179,7 +197,10 @@
                                    <h2>Copyright</h2>
                               </div>
                               <div class="copyright-text">
-                                   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <br>RNS automobiles All Rights Reserved</p>
+                                   <p>Copyright &copy;
+                                        <script>document.write(new Date().getFullYear())</script>
+                                        <br>RNS automobiles All Rights Reserved
+                                   </p>
                                    <p>By: <a target="_blank" href="https://www.facebook.com/RNSautomobiles">RNS automobiles</a></p>
                               </div>
                          </div>
