--- a/car-details.html
+++ b/car-details.html
@@ -98,133 +98,131 @@
 
                     <div class="col-md-6 col-xs-12">
                          <form action="#" method="post" class="form">
-                              <h2>Lorem ipsum dolor sit amet</h2>
+                              <h2>{{ current_item.car_introduction }}</h2>
 
-                              <p class="lead">ABS, Leather seats, Power Assisted Steering, Electric heated seats, New HU and AU, Xenon headlights</p>
-                              
-                              <p class="lead"><small><del> $11999.00</del></small> <strong class="text-primary">$11779.00</strong></p>
+                              <p class="lead"></p>
 
                               <div class="row">
-                                   <div class="col-md-4 col-sm-6">
+                                   <div class="col-md-6 col-sm-6">
                                         <p>
-                                             <span>Type</span>
+                                             <span>Manufacturer</span>
 
                                              <br>
 
-                                             <strong>Used vehicle</strong>
+                                             <strong>{{ current_item.manufacturer }}</strong>
                                         </p>
                                    </div>
 
-                                   <div class="col-md-4 col-sm-6">
+                                   <div class="col-md-6 col-sm-6">
                                         <p>
-                                             <span>Make</span>
+                                             <span>Year</span>
 
                                              <br>
 
-                                             <strong>Lorem ipsum dolor sit</strong>
+                                             <strong>{{ current_item.year }}</strong>
                                         </p>
                                    </div>
 
-                                   <div class="col-md-4 col-sm-6">
+                                   <div class="col-md-6 col-sm-6">
                                         <p>
-                                             <span> Model</span>
+                                             <span> Package </span>
 
                                              <br>
 
-                                             <strong>Lorem ipsum dolor sit</strong>
+                                             <strong>{{ current_item.package }}</strong>
                                         </p>
                                    </div>
 
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>First registration</span>
-
-                                             <br>
-
-                                             <strong>05/2010</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Mileage</span>
-
-                                             <br>
-
-                                             <strong>5000 km</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Fuel</span>
-
-                                             <br>
-
-                                             <strong>Diesel</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Engine size</span>
-
-                                             <br>
-
-                                             <strong>1800 cc</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Power</span>
-
-                                             <br>
-
-                                             <strong>85 hp</strong>
-                                        </p>
-                                   </div>
-
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Gearbox</span>
-
-                                             <br>
-
-                                             <strong>Manual</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Number of seats</span>
-
-                                             <br>
-
-                                             <strong>4</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
-                                        <p>
-                                             <span>Doors</span>
-
-                                             <br>
-
-                                             <strong>2/3</strong>
-                                        </p>
-                                   </div>
-
-                                   <div class="col-md-4 col-sm-6">
+                                   <div class="col-md-6 col-sm-6">
                                         <p>
                                              <span>Color</span>
 
                                              <br>
 
-                                             <strong>Black</strong>
+                                             <strong>{{ current_item.color }}</strong>
                                         </p>
                                    </div>
+
+                                   <div class="col-md-6 col-sm-6">
+                                        <p>
+                                             <span>CC</span>
+
+                                             <br>
+
+                                             <strong>{{ current_item.cc }}</strong>
+                                        </p>
+                                   </div>
+
+                                   <div class="col-md-6 col-sm-6">
+                                        <p>
+                                             <span>Fuel Type</span>
+
+                                             <br>
+
+                                             <strong>{{ current_item.fuel_type }}</strong>
+                                        </p>
+                                   </div>
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Engine size</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>1800 cc</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Power</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>85 hp</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
+
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Gearbox</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>Manual</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Number of seats</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>4</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Doors</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>2/3</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
+
+<!--                                   <div class="col-md-4 col-sm-6">-->
+<!--                                        <p>-->
+<!--                                             <span>Color</span>-->
+
+<!--                                             <br>-->
+
+<!--                                             <strong>Black</strong>-->
+<!--                                        </p>-->
+<!--                                   </div>-->
                               </div>
                          </form>
                     </div>
@@ -238,7 +236,7 @@
                               </div>
 
                               <div class="panel-body">
-                                   <p>- Colour coded bumpers<br>- Tinted glass<br>- Immobiliser<br>- Central locking - remote<br>- Passenger airbag<br>- Electric windows<br>- Rear head rests<br>- Radio<br>- CD player<br>- Ideal first car<br>- Warranty<br>- High level brake light<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                   <p>{{ current_item.description }}</p>
                               </div>
                          </div>
                     </div>
@@ -255,24 +253,15 @@
 
                                         <br>
 
-                                        <strong>John Smith</strong>
+                                        <strong>Abdus Salam</strong>
                                    </p>
-
-                                   <p>
-                                        <span>Phone</span>
-
-                                        <br>
-
-                                        <strong><a href="tel:123-456-789">123-456-789</a></strong>
-                                   </p>
-
 
                                    <p>
                                         <span>Mobile phone</span>
 
                                         <br>
 
-                                        <strong><a href="tel:456789123">456789123</a></strong>
+                                        <strong><a href="tel:+8801711-333321">+8801711-333321</a></strong>
                                    </p>
 
                                    <p>
@@ -280,7 +269,7 @@
 
                                         <br>
 
-                                        <strong><a href="mailto:john@carsales.com">john@carsales.com</a></strong>
+                                        <strong><a href="mailto:info@rnsautomobiles.net">info@rnsautomobiles.net</a></strong>
                                    </p>
                               </div>
                          </div>
@@ -300,14 +289,17 @@
                                    <h2>Showroom</h2>
                               </div>
                               <address>
-                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> 30, Inner Circular (VIP) Road, Naya Paltan<br> Dhaka-1000, Bangladesh</p>
+                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> 30, Inner Circular (VIP) Road, Naya
+                                        Paltan<br> Dhaka-1000, Bangladesh</p>
                                    <p><i class="fa fa-phone" aria-hidden="true"></i> +8801711-333321</p>
                                    <p><i class="fa fa-envelope" aria-hidden="true"></i> info@rnsautomobiles.net</p>
                               </address>
 
                               <ul class="social-icon">
-                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg" class="fa fa-youtube"></a></li>
+                                   <li><a target="_blank" href="https://www.facebook.com/RNSautomobiles"
+                                          class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a target="_blank" href="https://www.youtube.com/channel/UCCFK9wyHfXip8vrivZ74yVg"
+                                          class="fa fa-youtube"></a></li>
                               </ul>
                          </div>
                     </div>
@@ -318,13 +310,28 @@
                                    <h2>Available Hour</h2>
                               </div>
                               <address>
-                                   <p>Tuesday &nbsp; &nbsp;  <span class="">Closed</span></p>
-                                   <p>Wednesday &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Thursday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Friday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Saturday &nbsp; &nbsp; <span>10AM–8PM</span></p>
-                                   <p>Sunday &nbsp; &nbsp; <span>10AM–8PM </span></p>
-                                   <p>Monday &nbsp; &nbsp; <span>10AM–8PM </span></p>
+                                   <div class="row">
+                                        <div class="col-md-4">
+                                             <p>Saturday</p>
+                                             <p>Sunday</p>
+                                             <p>Monday</p>
+                                             <p>Tuesday </p>
+                                             <p>Wednesday</p>
+                                             <p>Thursday</p>
+                                             <p>Friday</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>10AM–8PM</p>
+                                             <p>Closed</p>
+                                        </div>
+                                        <div class="col-md-4">
+                                        </div>
+                                   </div>
                               </address>
 
                          </div>
@@ -336,7 +343,10 @@
                                    <h2>Copyright</h2>
                               </div>
                               <div class="copyright-text">
-                                   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <br>RNS automobiles All Rights Reserved</p>
+                                   <p>Copyright &copy;
+                                        <script>document.write(new Date().getFullYear())</script>
+                                        <br>RNS automobiles All Rights Reserved
+                                   </p>
                                    <p>By: <a target="_blank" href="https://www.facebook.com/RNSautomobiles">RNS automobiles</a></p>
                               </div>
                          </div>
