added new pictures

--- a/cars.html
+++ b/cars.html
@@ -94,7 +94,7 @@
                          <div class="courses-thumb courses-thumb-secondary">
                               <div class="courses-top">
                                    <div class="courses-image">
-                                        <img :src="record.thumbnail_img" class="img-responsive" alt="">
+                                        <img :src="record.thumbnail_img" :style="{'width':'720px', 'height':'480px'}" class="img-responsive" alt="">
                                    </div>
                                    <div class="courses-date">
                                         <span title="Author"><i class="fa fa-dashboard"></i> 130 000km</span>
