--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <div class="courses-thumb courses-thumb-secondary">
                                 <div class="courses-top">
                                     <div class="courses-image">
-                                        <img :src="value.thumbnail_img" class="img-responsive" alt="">
+                                        <img :src="value.thumbnail_img" :style="{'width':'720px', 'height':'480px'}" class="img-responsive" alt="">
                                     </div>
                                     <div class="courses-date">
                                         <span title="CC"><i class="fa fa-cube"></i> {{ value.cc }} </span>
